// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem snapshots renders danger variant + isLast 1`] = `
<View
  accessibilityLabel="Deconnexion"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 0,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        {
          "backgroundColor": "#FEE2E2",
        },
        null,
      ]
    }
  >
    <Text
      color="#EF4444"
      name="log-out-outline"
      size={20}
    >
      log-out-outline
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            {
              "color": "#EF4444",
            },
          ]
        }
      >
        Deconnexion
      </Text>
    </View>
  </View>
</View>
`;

exports[`MenuItem snapshots renders loading state 1`] = `
<View
  accessibilityLabel="Synchronisation"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <ActivityIndicator
      color="#374151"
      size="small"
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Synchronisation
      </Text>
    </View>
  </View>
  <ActivityIndicator
    color="#D1D5DB"
    size="small"
  />
</View>
`;

exports[`MenuItem snapshots renders title only 1`] = `
<View
  accessibilityLabel="Parametres"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <Text
      color="#374151"
      name="settings-outline"
      size={20}
    >
      settings-outline
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Parametres
      </Text>
    </View>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;

exports[`MenuItem snapshots renders with badge >99 1`] = `
<View
  accessibilityLabel="Messages"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <Text
      color="#374151"
      name="mail-outline"
      size={20}
    >
      mail-outline
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 9,
            "height": 18,
            "justifyContent": "center",
            "minWidth": 18,
            "paddingHorizontal": 4,
            "position": "absolute",
            "right": -6,
            "top": -4,
          },
          {
            "backgroundColor": "#EF4444",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 10,
            "lineHeight": 14,
          }
        }
      >
        99+
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Messages
      </Text>
    </View>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;

exports[`MenuItem snapshots renders with badge 1`] = `
<View
  accessibilityLabel="Notifications"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <Text
      color="#374151"
      name="notifications-outline"
      size={20}
    >
      notifications-outline
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 9,
            "height": 18,
            "justifyContent": "center",
            "minWidth": 18,
            "paddingHorizontal": 4,
            "position": "absolute",
            "right": -6,
            "top": -4,
          },
          {
            "backgroundColor": "#EF4444",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "Montserrat_700Bold",
            "fontSize": 10,
            "lineHeight": 14,
          }
        }
      >
        5
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Notifications
      </Text>
    </View>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;

exports[`MenuItem snapshots renders with critical alert 1`] = `
<View
  accessibilityLabel="Verification - Action requise"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        {
          "backgroundColor": "#FF6B6B1A",
        },
      ]
    }
  >
    <Text
      color="#FF6B6B"
      name="shield-outline"
      size={20}
    >
      shield-outline
    </Text>
    <View
      style={
        [
          {
            "borderRadius": 5,
            "borderWidth": 2,
            "height": 10,
            "position": "absolute",
            "right": -2,
            "top": -2,
            "width": 10,
          },
          {
            "backgroundColor": "#FF6B6B",
            "borderColor": "#FFFFFF",
          },
        ]
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Verification
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#4B5563",
            "fontFamily": "Montserrat_400Regular",
            "fontSize": 15.5,
            "marginTop": 2,
          },
          {
            "color": "#FF6B6B",
          },
        ]
      }
    >
      Action requise
    </Text>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;

exports[`MenuItem snapshots renders with stat inline 1`] = `
<View
  accessibilityLabel="Mes billets"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <Text
      color="#374151"
      name="ticket-outline"
      size={20}
    >
      ticket-outline
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Mes billets
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Montserrat_600SemiBold",
              "fontSize": 11,
              "letterSpacing": 0.2,
            },
            {
              "color": "#6B7280",
            },
          ]
        }
      >
        3 actifs
      </Text>
    </View>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;

exports[`MenuItem snapshots renders with subtitle 1`] = `
<View
  accessibilityLabel="Mon compte - Gerer mes infos personnelles"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#F3F4F6",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "padding": 12.5,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        },
        {
          "backgroundColor": "#F9FAFB",
        },
        undefined,
        null,
      ]
    }
  >
    <Text
      color="#374151"
      name="person-outline"
      size={20}
    >
      person-outline
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "marginLeft": 12.5,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8.5,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#111827",
              "flexShrink": 1,
              "fontFamily": "Montserrat_500Medium",
              "fontSize": 17.5,
            },
            {
              "color": "#111827",
            },
            undefined,
          ]
        }
      >
        Mon compte
      </Text>
    </View>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#4B5563",
            "fontFamily": "Montserrat_400Regular",
            "fontSize": 15.5,
            "marginTop": 2,
          },
          {
            "color": "#6B7280",
          },
        ]
      }
    >
      Gerer mes infos personnelles
    </Text>
  </View>
  <Text
    color="#D1D5DB"
    name="chevron-forward"
    size={20}
    style={{}}
  >
    chevron-forward
  </Text>
</View>
`;
